Corrected visibility of Resume button

--- a/style.css
+++ b/style.css
@@ -127,13 +127,15 @@ body{
 
     display:flex;
 
+    gap:20px;
+
     justify-content:center;
 
-    gap:15px;
+    align-items:center;
 
     flex-wrap:wrap;
 
-    margin-top:35px;
+    margin-top:30px;
 }
 
 .quick-buttons button{
@@ -146,7 +148,7 @@ body{
 
     color:white;
 
-    padding:12px 20px;
+    padding:14px 28px;
 
     border-radius:14px;
 
